src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply font-ubuntu;
}

body:has(.scroll-block) {
  overflow-y: hidden;
}

body::-webkit-scrollbar,
.scrollbar::-webkit-scrollbar {
  width: 0.8rem;
}

body::-webkit-scrollbar-thumb,
.scrollbar::-webkit-scrollbar-thumb {
  cursor: pointer;
  border-radius: 2rem;
  @apply bg-app-dark-primary;
}

body::-webkit-scrollbar-track,
.scrollbar::-webkit-scrollbar-track {
  border-radius: 2rem;
  @apply bg-app-gray-primary;
}

